# mdm-management

./: catalog.csv  main.py  pyproject.toml
