[project]
name = "aggrid-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "pandera>=0.19",
    "pydantic>=2.0",
    "pyvis>=0.3.2",
    "sqlglot>=30.9.0",
    "streamlit>=1.58.0",
    "streamlit-aggrid>=1.2.1.post2",
    "streamlit-agraph>=0.0.45",
]
